tests/expectations/compiler/finalize/set_in_an_assignment_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:11:9
     |
  11 |         let result: () = Mapping::set(amounts, addr, amount);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `u128` but type `()` was found.
    --> compiler-test:12:28
     |
  12 |         let result: u128 = Mapping::set(amounts, addr, amount);
     |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EAST0372009]: variable `result` shadowed by
    --> compiler-test:12:13
     |
  12 |         let result: u128 = Mapping::set(amounts, addr, amount);
     |             ^^^^^^
"""]
